# misc-devboards

./: .gitmodules
baset1-media-converter/: .gitignore  baset-phy.kicad_sch  baset1-media-converter.kicad_pcb  baset1-media-converter.kicad_prl  baset1-media-converter.kicad_pro  baset1-media-converter.kicad_sch  psu.kicad_sch  spe-phy.kicad_sch  uart.kicad_sch
baset1-media-converter/firmware/: BitbangedMDIOInterface.cpp  BitbangedMDIOInterface.h  Makefile  converter.h  main.cpp  openocd-1.cfg  openocd-2.cfg  vectors.cpp
christmas-tree/: .gitignore  christmas-tree.kicad_pcb  christmas-tree.kicad_pro  christmas-tree.kicad_sch
christmas-tree/firmware/: CMakeLists.txt  Init.cpp  LEDTask.cpp  LEDTask.h  LocalConsoleTask.h  TreeCLISessionContext.cpp  TreeCLISessionContext.h  christmas-tree.h  openocd-orb.cfg  vectors.cpp
fpga-stm32-ifaces/: .gitignore  ethernet.kicad_sch  fpga-stm32-ifaces.kicad_pcb  fpga-stm32-ifaces.kicad_prl  fpga-stm32-ifaces.kicad_pro  fpga-stm32-ifaces.kicad_sch  mcu.kicad_sch  power-support.kicad_sch  psu.kicad_sch  review.gvp
fpga-stm32-ifaces/firmware/bsp-main/: common-vectors.cpp  hwinit.cpp  hwinit.h  staticnet-config.h
fpga-stm32-ifaces/firmware/bsp-super/: common-vectors.cpp  hwinit.cpp  hwinit.h
fpga-stm32-ifaces/firmware/main/: .gitignore  CMakeLists.txt  DemoCLISessionContext.h  DemoUDPProtocol.cpp  DemoUDPProtocol.h  Init.cpp  Makefile  dongle.cfg  globals.cpp  ifacetest.h  imagesize.sh  mainloop.cpp  openocd-jtag.cfg  openocd-orb.cfg  orb.sh  orbtop.sh  vectors.cpp
fpga-stm32-ifaces/firmware/main/bsp/: hwinit.cpp  hwinit.h
fpga-stm32-ifaces/firmware/main/main/: .gdbinit  CMakeLists.txt  DemoCLISessionContext.cpp  DemoTCPProtocol.cpp  DemoTCPProtocol.h  Init.cpp  Makefile  firmware.ld  globals.cpp  ifacetest.h  mainloop.cpp  openocd-swd.cfg
fpga-stm32-ifaces/firmware/super/: .gdbinit  .gitignore  CMakeLists.txt  IBCRegisterReader.cpp  IBCRegisterReader.h  Init.cpp  Makefile  SupervisorSPIServer.cpp  SupervisorSPIServer.h  TempSensorReader.cpp  TempSensorReader.h  dongle.cfg  mainloop.cpp  openocd.cfg  superregs.h  supervisor.h  vectors.cpp
fpga-stm32-ifaces/firmware/super/bsp/: common-vectors.cpp
fpga-stm32-ifaces/firmware/super/main/: CMakeLists.txt  mainloop.cpp  supervisor.h
fpga-stm32-ifaces/firmware/super/super/: SupervisorSPIServer.cpp  openocd.cfg  supervisor.h  vectors.cpp
fpga-stm32-ifaces/output/: .gitignore  fab-notes.txt
fpga-stm32-ifaces/rtl/iface-test/: .gitignore  iface-test.xpr
fpga-test-kintex676-artix484/: .gitignore  artix-io.kicad_sch  artix-power.kicad_sch  artix-transceivers.kicad_sch  artix.kicad_sch  fpga-test-kintex676-artix484.kicad_pcb  fpga-test-kintex676-artix484.kicad_pro  fpga-test-kintex676-artix484.kicad_sch  kintex-io.kicad_sch  kintex-power.kicad_sch  kintex-transceivers.kicad_sch  kintex.kicad_sch  psu.kicad_sch
fpga-test-kintex676-artix484/rtl/: hwserver.sh
fpga-test-kintex676-artix484/rtl/artix/: .gitignore  cross-device-apb.xpr
jtag-swd-bridge/: .gitignore  jtag-swd-bridge-cache.lib  jtag-swd-bridge.kicad_pcb  jtag-swd-bridge.pro  jtag-swd-bridge.sch
ksz9031-eval/: .gitignore  fp-info-cache  ksz9031-eval-cache.lib  ksz9031-eval.kicad_pcb  ksz9031-eval.kicad_prl  ksz9031-eval.kicad_pro  ksz9031-eval.pro  ksz9031-eval.sch
kup-lulz/: .gitignore  fpgasupport.kicad_sch  hdio.kicad_sch  hpio.kicad_sch  kup-lulz.kicad_pcb  kup-lulz.kicad_prl  kup-lulz.kicad_pro  kup-lulz.kicad_sch  mgmt.kicad_sch  psu.kicad_sch  qsfp28.kicad_sch  sfp28.kicad_sch  smpm.kicad_sch
kup-lulz/firmware/main/: CMakeLists.txt  main.ld  openocd-orb.cfg  staticnet-config.h
kup-lulz/firmware/main/bl/: CMakeLists.txt  bootloader.h  bootloader.ld  mainloop.cpp  vectors.cpp
kup-lulz/firmware/main/bsp/: APBFPGAInterface.cpp  APBFPGAInterface.h  CMakeLists.txt  FPGAInterface.h  common-vectors.cpp  hwinit.cpp  hwinit.h
kup-lulz/firmware/super/: .gdbinit  (+4 more)
kup-lulz/firmware/super/main/: ButtonTask.h  CMakeLists.txt  Init.cpp  KupLulzSuperSPIRegisters.h  KupLulzSuperSPIServer.cpp  KupLulzSuperSPIServer.h  LEDTask.h  PDURail.h  supervisor.h  vectors.cpp
kup-lulz/rtl/: hwserver.sh
led-test/: .gitignore  led-test.kicad_pcb  led-test.kicad_prl  led-test.kicad_pro  led-test.kicad_sch
lpr-rgmii-phy/: .gitignore  lpr-rgmii-phy.kicad_pcb  lpr-rgmii-phy.kicad_prl  lpr-rgmii-phy.kicad_pro  lpr-rgmii-phy.kicad_sch
ltc3374-test/: .gitignore  ltc3374-test.kicad_pcb  ltc3374-test.kicad_prl  ltc3374-test.kicad_pro  ltc3374-test.kicad_sch
orbtrace-xilinx-jtag/: .gitignore  orbtrace-xilinx-jtag.kicad_pcb  orbtrace-xilinx-jtag.kicad_prl  orbtrace-xilinx-jtag.kicad_pro  orbtrace-xilinx-jtag.kicad_sch
paste-test/: .gitignore  paste-test.kicad_pcb  paste-test.kicad_prl  paste-test.kicad_pro  paste-test.kicad_sch
pic32mx-jtag/: openocd.cfg  pic32mx-jtag.kicad_pcb  pic32mx-jtag.kicad_prl  pic32mx-jtag.kicad_pro  pic32mx-jtag.kicad_sch
pip-test/: .gitignore  pip-test.kicad_pcb  pip-test.kicad_prl  pip-test.kicad_pro  pip-test.kicad_sch
qsfp-to-arc6/: .gitignore  qsfp-to-arc6.kicad_pcb  qsfp-to-arc6.kicad_pro  qsfp-to-arc6.kicad_sch
sims/: kup-lulz-import1.son  kup-lulz-import2.son  kup-lulz-qsfp-01.son  kup-lulz-qsfp-02-crop1.son  kup-lulz-qsfp-02-crop2.son  kup-lulz-qsfp-02-stitched.son  kup-lulz-qsfp-02.son  kup-lulz-qsfp1-backtrim-launchonly.son  kup-lulz-qsfp1-backtrim-viatrim-bgaonly-edgeground.son  kup-lulz-qsfp1-backtrim-viatrim-bgaonly.son  kup-lulz-qsfp1-backtrim-viatrim.son  kup-lulz-qsfp1-backtrim.son  kup-lulz-qsfp1.son  kup-lulz-sfp-launch-shrink1.son  kup-lulz-sfp-launch-shrink2.son  kup-lulz-sfp-launch-shrink3.son  kup-lulz-sfp-launch.son  kup-lulz3-cropped-trimmed.son  kup-lulz3-cropped.son  meanders-01.son  oshpark-4l-microstrip-50r.son  oshpark-4l-microstrip-diff-100r.son
symmetricom-breakout/: .gitignore  symmetricom-breakout.kicad_pcb  symmetricom-breakout.kicad_prl  symmetricom-breakout.kicad_pro  symmetricom-breakout.kicad_sch
tragiclaser-phy/: bootconfig.sch  fpga-support.sch  phy.sch  psu.sch  tragiclaser-phy-cache.lib  tragiclaser-phy.kicad_pcb  tragiclaser-phy.pro  tragiclaser-phy.sch
(+42 files in other folders)
